Styling done. Next to jests with tests.

--- a/src/App.css
+++ b/src/App.css
@@ -13,21 +13,45 @@ body,
 	width: 100%;
 	max-width: 1440px;
 	line-height: 1.6;
-	font-size: 18px;
+	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
 }
 
 .TodoContainer {
 	max-width: 720px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* New Todo Form */
+
+/* iPhone 12 as benchmark for mobiles */
+@media screen and (max-width: 844px) {
+	.custom-w-55 {
+		width: 100%;
+	}
+}
+
+@media screen and (min-width: 845px) {
+	.custom-w-55 {
+		width: 55%;
+	}
+}
 
 /* Todo List */
 
 .margin-x-max {
 	margin-left: auto !important;
 	margin-right: auto !important;
+}
+
+.btn-container {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .task-name {
